Correct layout bug of three images displayed in one row

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ h1 {
 
 .game-container {
 	height: 620px;
+	width: 100%;
 	position: relative;
 	top: 0;
 	left: 0;
@@ -97,26 +98,26 @@ h1 {
 }
 
 .question-container ul {
-	display: table;
-	width: 100%;
+	max-width: 80%;
 	margin: 0 auto 40px;;
 	height: 380px;
 	color: #fff;
 }
 
 .question-container li {
-	font-size: 2em;
+	font-size: 2.25em;
 	width: 42.5%;
-	max-width: 450px;
-	height: 180px;
+	max-width: 550px;
+	min-width: 300px;
+	height: 220px;
 	display: inline-block;
 	margin: 20px 20px;
 }
 
 .default {
-	height: 180px;
+	height: 220px;
 	display: block;
-	line-height: 160px;
+	line-height: 200px;
 	width: 100%;
 	z-index: 2;
 	background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
